# VulkanDemo

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
applications/: CMakeLists.txt  application.cpp  application.hpp  application_config.hpp  application_runner.cpp  application_runner.hpp
apps/: CMakeLists.txt  main.cpp
cmake/: CompileShaders.cmake
dali/: CMakeLists.txt  engine_interface.hpp
dali/engines/: vk_raytracer.cpp  vk_raytracer.hpp
data/shaders/: model.vert  post.frag  post.vert  text.frag  text.vert
data/shaders/cameras/: pinhole_camera.comp
data/shaders/compute/cameras/: pinhole_camera.comp
data/shaders/compute/random/: mwc64x_seeding.comp
data/shaders/compute/raytraversal/: bounce.comp  intersect.comp
data/shaders/debug/: text.frag
data/shaders/graphics/debug/: text.frag  text.vert
data/shaders/graphics/lighting/: model.frag  model.vert  ray.frag  ray.vert  resolve.frag  resolve.vert
data/shaders/graphics/posteffects/: post.frag  post.vert
data/shaders/include/sampling/: random.comp  sampling.comp
data/shaders/include/types/: intersection.comp  ray.comp  shape.comp
data/shaders/lighting/: model.frag  model.vert  ray.frag  ray.vert  resolve.frag  resolve.vert
data/shaders/mwc64x/: README.txt
data/shaders/mwc64x/glsl/: mwc64x.comp  mwc64x_seeding.comp
data/shaders/mwc64x/glsl/mwc64x/: mwc64x_rng.comp  skip_mwc.comp
data/shaders/mwc64x/test/: dump_samples.cpp  estimate_pi.cpp  makefile  opencl_buffer.hpp  opencl_device.hpp  test_rng.cpp
data/shaders/posteffects/: post.vert
data/shaders/raytrace_khr/: closesthit.rchit  raygen.rgen
data/shaders/raytrace_khr/nvidia/: raytrace.rchit
data/shaders/raytrace_khr/pathtrace_khr/: pathtrace.rchit  pathtrace.rgen  pathtrace.rmiss
data/shaders/raytrace_khr/shapes/: sphere.rchit  sphere.rint
data/shaders/raytraversal/: bounce.comp  intersect.comp
data/shaders/sampling/: noise.comp  rng_seeding.comp  sampling.comp
data/shaders/types/: camera.comp  intersection.comp  light.comp  ray.comp  shape.comp
demos/: CMakeLists.txt  demo.cpp  demo.hpp  demo_harness.cpp  demo_harness.hpp  multipass_example.cpp  multipass_example.hpp  naive_path_tracer.cpp  naive_path_tracer.hpp  path_tracer_khr.cpp  path_tracer_khr.hpp  proper_path_tracer.hpp  ray_trace_triangle_khr.cpp  ray_trace_triangle_khr.hpp  viking_room.cpp  viking_room.hpp
include/demo/: application.hpp  application_runner.hpp  engine_interface.hpp  model.hpp  shader_resource.hpp  vk_raytracer.hpp
release/: CMakeCache.txt  Makefile  cmake_install.cmake
release/demos/: Makefile  cmake_install.cmake
release/src/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  application.cpp  application.hpp  application_runner.cpp  application_runner.hpp  blas.cpp  engine_interface.hpp  model.cpp  model.hpp  shader_resource.cpp  shader_resource.hpp  text_renderer.cpp  text_renderer.hpp  vk_raytracer.cpp  vk_raytracer.hpp
